# skill-up-blog

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: base_service.py
backend/posts/: models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_initial.py  0003_comment_like.py  0004_post_board_type_post_category_post_image.py  0005_post_views.py  0006_alter_post_category.py
backend/scripts/: wait-for-db.sh
backend/users/: models.py  serializers.py  services.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/Layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Free.tsx  GuestBook.tsx  Home.tsx  Login.tsx  Register.tsx  Tech.tsx
frontend/src/styles/: theme.ts
frontend/src/utils/: axios.ts
scripts/: create_test_image.py
tests/api/: auth_test.sh  board_test.sh  image_test.sh  last_username.txt  post_test.sh  token.txt
